Use toList method